Style: Spacing issue in vector styles
Also, made selector not dependent of the type of header used (h2 in this case)

Bug: T94069

--- a/resources/ext.gather.styles/vector.less
+++ b/resources/ext.gather.styles/vector.less
@@ -10,8 +10,9 @@
 }
 
 .collection-item {
-	h2 {
+	.collection-item-title {
 		border-bottom: none;
+		padding-top: 0.5em;
 	}
 }
 
